--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
-# For how it is generated, see `hack/generate-authors.sh`.
-
-James Adeleke <adejames97@gmail.com>
-Merit Ogbonna  <merithstan4real@gmail.com>
-
+#This file contains names of project authors
+James Adeleke<adejames97@gmail.com>
+Blessing Ogbonna<merithstan4real@gmail.com>
